# Enterprise_Knowledge_Copilot

./: .gitignore  main.py  pyproject.toml  run_dev.sh
docs/: design.md
src/app/: main.py
